k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: app-demo
spec:
  to:
    kind: Service
    name: app-demo
  port:
    targetPort: 80
